@@ -1,3 +1,7 @@
+2004-04-19  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Added mount option parser to 2.4 build
+	
 2004-04-13  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Replaced binary mount data with text options
